# crocodile

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  Setup.md  docker-compose.dev.yml  docker-compose.yml  mongod.conf  pyproject.toml  pytest.ini  requirements.txt
backend/: Dockerfile  endpoints.md  fastAPI.py  requirements.txt
backend/app/: config.py  dependencies.py  main.py  schemas.py  test.py
backend/app/endpoints/: crocodile_api.py  crocodile_runner.py  imdb_data.json  imdb_example.py  models.py
backend/app/services/: __init__.py  annotation_service.py  data_service.py  data_service.py.bak  elastic_service.py  pagination_service.py  query_service.py  result_sync.py  result_sync.py.bak  table_service.py  task_queue.py  utils.py
backend/scripts/: generate_token.py
crocodile/: __init__.py  cli.py  crocodile.py  feature.py  fetchers.py  ml.py  mongo.py  processors.py  result_fetcher.py  stats.json  trace.py  typing.py  utils.py
crocodile/models/: default.h5
get_graphql_methods/: Dockerfile  crocodile_getmethods.py  database_utils.py  docker-compose.yml  graphql_queries.md  requirements.txt
graphql/: crocodile_upload_file.py  database_utils.py
notebooks/: Untitled.ipynb  __init__.py  test_crocodile.ipynb
notebooks/test/: onboard_data_test.py
patches/: fix_imports.py
tables/: classified.json  correct_qids_VGUZX5R3.json
test/: onboard_data_test.py  start_computation.py
tests/: conftest.py  patch_imports.py
tests/api/: test_annotations.py  test_complete_validation.py  test_csv_upload.py  test_dataset_endpoints.py  test_edge_cases.py  test_error_scenarios.py  test_integration.py  test_performance.py  test_schema_validation.py  test_streaming_endpoints.py  test_table_endpoints.py
training/: computation.ipynb  export_training.py  onboard_data.py  onboard_data_test.py  onboard_no_insertmany.py  onboard_test.py  run.sh  start_computation.py
training/trained_models/: neural_ranker.h5
