[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crocodile-linker"
version = "0.1.0"
description = "A package for entity linking using LionLinker."
authors = [
    {name = "Roberto Avogadro", email = "roberto.avogadro@sintef.no"},
    {name = "Federico Belotti", email = "belo.fede@outlook.com"},
]
urls = {Homepage = "https://github.com/enRichMyData/crocodile"}
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "pymongo==4.11.0",
    "nltk==3.9.1",
    "aiohttp==3.11.11",
    "numpy<2.0",
    "pandas>=2.0",
    "python-dotenv==1.0.1",
    "tensorflow==2.18.0",
    "column-classifier",
    "jsonargparse==4.37.0",
]

[project.optional-dependencies]
app = [
    "fastapi==0.115",
    "pydantic<3",
    "pydantic-settings==2.8.1",
    "uvicorn==0.34",
    "python-multipart==0.0.20",
    "python-jose==3.4.0",
    "elasticsearch==8.9.0"
]
dev = [
    "flake8==4.0.1",
    "black==21.12b0",
    "isort==5.10.0",
    "mypy==0.910",
    "pre-commit==4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crocodile*"]

[tool.ruff]
line-length = 99
# Enable Pyflakes `E` and `F` codes by default.
select = [
  "E",
  "W", # see: https://pypi.org/project/pycodestyle
  "F", # see: https://pypi.org/project/pyflakes
  "I"
]
ignore = [
  "E731", # Do not assign a lambda expression, use a def
  "E402", # Module level import not at top of file
]
# Exclude a variety of commonly ignored directories.
exclude = [".git", "docs", "notebooks", "examples", "*.ipynb"]
ignore-init-module-imports = true

# Black formatting
[tool.black]
line_length = 99
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.mypy]
# -> Level 1# custom settings
show_error_codes = true
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
# suggested settings# # https://mypy.readthedocs.io/en/stable/existing_code.html?highlight=no_implicit_optional#introduce-stricter-options
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
# this is for reusing same variable with different types
allow_redefinition = true

# -> Level 2# Getting these passing should be easy
strict_equality = true
strict_concatenate = true
# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# -> Level 3# These shouldn't be too much additional work, but may be tricky to get passing if you use a lot of untyped libraries
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_any_unimported = false
# These next few are various gradations of forcing use of type annotationsdisallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

# -> Level 4# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = false
# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = false
